# ai_detector_core

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  TESTING_INSTRUCTIONS.md  api_definition.md  compile_extension.sh  export_model.py  heic_to_png.cpp  monitor.py  optimize_model.py  reproduce_prnu_issue.py  requirements.txt  server.py  setup.py  setup_ext.py  start_training.py  strace_out.txt  test_cpp.py  test_export_pipeline.py  test_video_detector.py  trace_error.txt  train_cpp.cpp  video_detector_cpp.cpp
config/: video_generators.json
data/: ai_urls.txt  real_urls.txt
notebooks/: train_colab.ipynb
scripts/: generate_training_pairs.py
src/: cag_cache.py  detect.py  edit_ai_content.py  fast_video_processor.cpp  fast_video_processor.cpp.bak  format_analyzer.py  generate_ai_content.py  image_loader.py  live_plot.py  llm_explainer.py  meta_ai_cycle.py  meta_ai_downloader.py  meta_ai_realtime.py  model_prnu.py  monitor.py  motion_analyzer.py  prnu.py  prnu_cuda.py  prnu_features.py  prnu_recovery.py  rag_store.py  train.py  train_deep.py  train_multi_source.py  train_pytorch.py  train_streaming.py  train_video_realtime.py  training_dashboard.py  training_data_pipeline.py  umfre.py  video_prompt_analyzer.py
src/video_generators/: __init__.py  base.py  itxio.py  orchestrator.py
